--- a/calculadora.html
+++ b/calculadora.html
@@ -11,7 +11,7 @@
             text-align: center;
         }
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Times New Roman', Times, serif, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
